<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light"
    tools:context=".MainActivity">

    <include
        android:id="@+id/tb"
        layout="@layout/tool_bar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:width="150dp"
            android:id="@+id/notes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/ui"
            android:layout_margin="5dp"
            android:onClick="notesOnClick"
            android:text="@string/noteButton" />

        <Button
            android:width="150dp"
            android:id="@+id/todolist_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"
            android:onClick="todoOnClick"
            android:background="@color/ui"
            android:text="@string/todolistButton" />

        <Button
            android:width="150dp"
            android:id="@+id/timer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="timerOnClick"
            android:layout_margin="5dp"
            android:background="@color/ui"
            android:text="@string/timerButton" />

        <Button
            android:width="150dp"
            android:id="@+id/alarm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"
            android:onClick="alarmOnClick"
            android:background="@color/ui"
            android:text="@string/alarmButton" />


        <Button
            android:width="150dp"
            android:id="@+id/assignments_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="assignmentsOnClick"
            android:layout_margin="5dp"
            android:background="@color/ui"
            android:text="@string/assignmentsButton" />

        <Button
            android:width="150dp"
            android:id="@+id/gradeCalculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onGradeCalculatorClick"
            android:layout_margin="5dp"
            android:background="@color/ui"
            android:text="@string/gradeButton"/>

    </LinearLayout>
</LinearLayout>