<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".AlarmActivity">

    <include
        android:id="@+id/tb"
        layout="@layout/tool_bar" />

    <TimePicker
        android:id="@+id/tp"
        android:layout_width="match_parent"
        android:layout_height="349dp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onClickStart"
            android:text="@string/start"
            android:padding="10dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="#FFFFFF"
            />

        <Button
            android:layout_margin="10dp"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onClickStop"
            android:text="@string/stop"
            android:background="@color/colorPrimaryDark"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:textColor="@color/lightPurple"
            android:text="@string/msg" />

        <EditText
            android:id="@+id/msg"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:width="20dp" />

    </LinearLayout>


</LinearLayout>

